# trajectory_visualization

./: CMakeLists.txt  README.MD  package.xml
data/: trajectory.json
launch/: trajectory_saver.launch  trajectory_visualization.launch
rviz/: trajectory_config.rviz
src/: trajectory_reader.cpp  trajectory_saver.cpp
srv/: SaveTrajectory.srv
